--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,18 @@
 	<link rel='stylesheet' href='/build/bundle.css'>
 
 	<script defer src='/build/bundle.js'></script>
+	<script>
+		MathJax = {
+			tex: {
+				macros: {
+					der: ["{ \\frac{\\mathrm d#1}{\\mathrm d#2} }",2],
+					derr: ["{ \\frac{\\mathrm d^2#1}{{\\mathrm d#2}^2} }",2],
+					rr: "{\\mathbb R}"
+				}
+			}
+		}
+	</script>
+	<script type="text/javascript" id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 </head>
 
 <body>
