Add summary boxes to CoV basics article and polish it

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,7 +17,8 @@
 				macros: {
 					der: ["{ \\frac{\\mathrm d#1}{\\mathrm d#2} }",2],
 					derr: ["{ \\frac{\\mathrm d^2#1}{{\\mathrm d#2}^2} }",2],
-					rr: "{\\mathbb R}"
+					rr: "{\\mathbb R}",
+					ssb: ["_{\\mathrm{#1}}",1]
 				}
 			}
 		}
