--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,9 +4,9 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Svelte app</title>
+	<title>mimo31</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
+	<!-- <link rel='icon' type='image/png' href='/favicon.png'> -->
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
@@ -18,7 +18,9 @@
 					der: ["{ \\frac{\\mathrm d#1}{\\mathrm d#2} }",2],
 					derr: ["{ \\frac{\\mathrm d^2#1}{{\\mathrm d#2}^2} }",2],
 					rr: "{\\mathbb R}",
-					ssb: ["_{\\mathrm{#1}}",1]
+					nn: "{\\mathbb N}",
+					ssb: ["_{\\mathrm{#1}}",1],
+					lmnf: "\\lim_{n\\to\\infty}"
 				}
 			}
 		}
